--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
         <div class="itinerary">
             <img src="./img/hanoi.jpg" alt="Ha Noi Street Food">
             <h2>Ha Noi Street Food 5/13 - 5/14:</h2>
-            <p>Charred grill ground pork Noodles, Screaming Noodles</p>
+            <p>Charred grill ground pork Noodles, Screaming Spicy Noodles</p>
         </div>
 
         <div class="itinerary">
             <img src="./img/sapa.jpg" alt="Sapa Street Food">
             <h2>Sapa Street Food 5/15-5/16:</h2>
-            <p>Forest grill Chicken</p>
+            <p>Forest grilled Chicken</p>
         </div>
     </div>
 
